--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "standard": "^12.0.1"
   },
   "dependencies": {
-    "aws-sdk": "^2.470.0"
+    "aws-sdk": "^2.470.0",
+    "lodash": "^4.17.11",
+    "rollbar": "^2.7.1",
+    "snowplow-analytics-sdk": "^0.1.0",
+    "url": "^0.11.0"
   }
 }
