--- a/package.json
+++ b/package.json
@@ -18,17 +18,21 @@
     "test": "jest --forceExit --coverage"
   },
   "devDependencies": {
-    "@cruglobal/serverless-merge-config": "^1.1.0",
     "dotenv": "^8.0.0",
-    "jest": "^24.8.0",
+    "rollbar-sourcemap-webpack-plugin": "^2.5.1",
     "serverless": "^1.44.1",
-    "standard": "^12.0.1"
+    "serverless-webpack": "^5.3.1",
+    "standard": "^12.0.1",
+    "webpack": "^4.2.0",
+    "webpack-node-externals": "^1.6.0"
   },
   "dependencies": {
     "aws-sdk": "^2.470.0",
     "lodash": "^4.17.11",
+    "promise-retry": "^1.1.1",
     "rollbar": "^2.7.1",
     "snowplow-analytics-sdk": "^0.1.0",
+    "source-map-support": "^0.5.13",
     "url": "^0.11.0"
   }
 }
