--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "webpack-node-externals": "^1.6.0"
   },
   "dependencies": {
+    "async-retry": "^1.3.1",
     "aws-sdk": "^2.470.0",
+    "bent": "^7.3.0",
     "lodash": "^4.17.11",
     "promise-retry": "^1.1.1",
     "rollbar": "^2.7.1",
