--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "devDependencies": {
     "dotenv": "^8.0.0",
     "rollbar-sourcemap-webpack-plugin": "^2.5.1",
-    "serverless": "^1.44.1",
+    "serverless": "1.59.2",
     "serverless-webpack": "^5.3.1",
     "standard": "^14.0.0",
     "webpack": "^4.2.0",
