--- a/package.json
+++ b/package.json
@@ -18,17 +18,18 @@
     "test": "jest --forceExit --coverage"
   },
   "devDependencies": {
+    "aws-sdk": "^2.470.0",
     "dotenv": "^8.0.0",
     "rollbar-sourcemap-webpack-plugin": "^2.5.1",
     "serverless": "1.59.2",
+    "serverless-google-cloudfunctions": "^3.1.0",
     "serverless-webpack": "^5.3.1",
     "standard": "^14.0.0",
-    "webpack": "^4.2.0",
-    "webpack-node-externals": "^1.6.0"
+    "webpack": "^4.43.0",
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
     "async-retry": "^1.3.1",
-    "aws-sdk": "^2.470.0",
     "bent": "^7.3.0",
     "lodash": "^4.17.11",
     "promise-retry": "^1.1.1",
