--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cru-udp-pipeline",
   "version": "1.0.0",
   "description": "CRU User Data Platform Pipeline (λ functions)",
+  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/CruGlobal/cru-udp-pipeline"
@@ -18,17 +19,17 @@
     "test": "jest --forceExit --coverage"
   },
   "devDependencies": {
-    "aws-sdk": "^2.470.0",
-    "dotenv": "^8.0.0",
-    "rollbar-sourcemap-webpack-plugin": "^2.5.1",
-    "serverless": "1.59.2",
-    "serverless-google-cloudfunctions": "^3.1.0",
-    "serverless-webpack": "^5.3.1",
-    "standard": "^14.0.0",
+    "dotenv": "^8.2.0",
+    "rollbar-sourcemap-webpack-plugin": "^2.11.1",
+    "serverless": "1.72.0",
+    "serverless-google-cloudfunctions-amazing": "^2.3.9",
+    "serverless-webpack": "^5.3.2",
+    "standard": "^14.3.4",
     "webpack": "^4.43.0",
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
+    "@google-cloud/bigquery": "^4.7.0",
     "async-retry": "^1.3.1",
     "bent": "^7.3.0",
     "lodash": "^4.17.11",
