--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@google-cloud/bigquery": "^4.7.0",
     "async-retry": "^1.3.1",
+    "aws-sdk": "^2.885.0",
     "bent": "^7.3.0",
     "lodash": "^4.17.11",
     "promise-retry": "^1.1.1",
