--- a/package.json
+++ b/package.json
@@ -8,41 +8,40 @@
     "url": "https://github.com/CruGlobal/cru-udp-pipeline"
   },
   "author": "Brian Zoetewey <brian.zoetewey@cru.org>",
-  "license": "MIT",
+  "license": "BSD-3-Clause",
   "private": true,
   "engines": {
-    "node": "> 10.0.0"
+    "node": "> 16.0.0"
   },
   "scripts": {
-    "lint": "standard || exit 0",
-    "lint:fix": "standard --fix || exit 0",
+    "lint": "standard --verbose",
     "test": "jest --forceExit --coverage"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.4",
-    "@babel/node": "^7.10.5",
-    "@babel/preset-env": "^7.11.0",
-    "dotenv": "^8.2.0",
-    "rollbar-sourcemap-webpack-plugin": "^2.11.1",
-    "serverless": "1.72.0",
-    "serverless-google-cloudfunctions-amazing": "^2.3.9",
-    "serverless-webpack": "^5.3.2",
-    "standard": "^14.3.4",
-    "webpack": "^4.43.0",
-    "webpack-node-externals": "^1.7.2"
+    "@babel/core": "^7.17.9",
+    "@babel/node": "^7.16.8",
+    "@babel/preset-env": "^7.16.11",
+    "dotenv": "^16.0.0",
+    "rollbar-sourcemap-webpack-plugin": "^3.3.0",
+    "serverless": "3.14.0",
+    "serverless-google-cloudfunctions": "^4.5.0",
+    "serverless-webpack": "^5.7.0",
+    "standard": "^16.0.4",
+    "webpack": "^5.72.0",
+    "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
-    "@google-cloud/bigquery": "^4.7.0",
-    "async-retry": "^1.3.1",
-    "aws-sdk": "^2.885.0",
-    "bent": "^7.3.0",
-    "lodash": "^4.17.11",
-    "promise-retry": "^1.1.1",
+    "@google-cloud/bigquery": "^5.12.0",
+    "async-retry": "^1.3.3",
+    "aws-sdk": "^2.1116.0",
+    "bent": "^7.3.12",
+    "lodash": "^4.17.21",
+    "promise-retry": "^2.0.1",
     "punycode": "^2.1.1",
-    "querystring": "^0.2.0",
-    "rollbar": "^2.7.1",
-    "snowplow-analytics-sdk": "^0.1.0",
-    "source-map-support": "^0.5.13",
+    "querystring": "^0.2.1",
+    "rollbar": "^2.25.0",
+    "snowplow-analytics-sdk": "^0.3.1",
+    "source-map-support": "^0.5.21",
     "url": "^0.11.0"
   }
 }
